[project]
name = "kyle-example-repo"
version = "0.1.0"
description = "An example Python project where pushing will run tests in any branch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
